--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Django==1.11
 Pillow==5.4.0
 certifi==2019.3.9
 chardet==3.0.4
+coverage==4.5.3
 dj-database-url==0.5.0
 django-forms-bootstrap==3.1.0
 gunicorn==19.9.0
