--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,9 @@ django-forms-bootstrap==3.1.0
 gunicorn==19.9.0
 idna==2.8
 psycopg2==2.8.2
+python-dateutil==2.8.0
 pytz==2019.1
+pyuploadcare==2.6.0
 requests==2.22.0
 stripe==2.29.4
 urllib3==1.25.3
